# src/codegen_server/openapi_server/models/send_email_object.py
@@ -1,0 +1,61 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class SendEmailObject(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, message=None):  # noqa: E501
+        """SendEmailObject - a model defined in OpenAPI
+
+        :param message: The message of this SendEmailObject.  # noqa: E501
+        :type message: str
+        """
+        self.openapi_types = {
+            'message': str
+        }
+
+        self.attribute_map = {
+            'message': 'message'
+        }
+
+        self._message = message
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SendEmailObject':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SendEmailObject of this SendEmailObject.  # noqa: E501
+        :rtype: SendEmailObject
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def message(self) -> str:
+        """Gets the message of this SendEmailObject.
+
+
+        :return: The message of this SendEmailObject.
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message: str):
+        """Sets the message of this SendEmailObject.
+
+
+        :param message: The message of this SendEmailObject.
+        :type message: str
+        """
+
+        self._message = message
