# src/codegen_server/openapi_server/server_impl/candidate_controller_impl.py
@@ -71,7 +71,9 @@ class Candidate_controller_Impl:
                 db_candidates_obj = Db_Candidates(
                     name=candidate_request.name,
                     email=candidate_request.email,
-                    jobid=candidate_request.jobid
+                    jobid=candidate_request.jobid,
+                    resume_matched_percentage=candidate_request.resume_matched_percentage,
+                    is_shortlisted=candidate_request.is_shortlisted
                 )
 
                 db_candidates_obj.add()
@@ -79,3 +81,25 @@ class Candidate_controller_Impl:
             except Exception as ex:
                 self.logger.error(ex, exc_info=True)
                 return Error(code=500, message=ex), 500
+
+    def save_scanned_candidates(self, analyzed_candidates):
+        for key, value in analyzed_candidates.items():
+            candidate_name = key.replace("-", " ")
+            jobid = int(value["job_id"])
+            email = value["email"]
+            resume_matched_percentage = value["resume_matched_percentage"]
+            is_shortlisted = ""
+
+            try:
+                db_candidates_obj = Db_Candidates(
+                    name=candidate_name,
+                    email=email,
+                    jobid=jobid,
+                    resume_matched_percentage=resume_matched_percentage,
+                    is_shortlisted=is_shortlisted
+                )
+
+                db_candidates_obj.add()
+            except Exception as ex:
+                self.logger.error(ex, exc_info=True)
+                raise ex
